--- a/client/styles/UserHomePage.css
+++ b/client/styles/UserHomePage.css
@@ -83,14 +83,13 @@
 
 .entry-create form {
     width: 100%;
-    padding: 12px;
 }
 
 .entry-header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 5px 15px 15px 0px;
+    margin: 0px 15px 15px 0px;
     width: 100%;
 }
 
